# joi-hub

./: .env.example  .gitignore  .hadolint.yaml  .yamllint.yml  CLAUDE.md  Makefile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
gateway/: config.yaml
scripts/: dokctl.py
src/mcps/: config.py  gateway.py  server.py
src/mcps/auth/: login.html  provider.py
src/mcps/servers/: jackett.py  memory.py  storage.py  tmdb.py  transmission.py
src/mcps/shared/: query.py  schema.py  torrent.py
tests/: conftest.py  test_auth.py  test_gateway_tools.py  test_jackett_unit.py  test_pagination_unit.py  test_query.py  test_server_unit.py  test_storage_unit.py  test_tmdb_tools_unit.py  test_tool_schemas.py  test_torrent_unit.py  test_transmission.py  test_transmission_tools_unit.py  test_transmission_unit.py
tests/cassettes/test_tmdb/: TestTMDBContract.test_search_media_by_imdb_movie.yaml  TestTMDBContract.test_search_media_by_imdb_tv.yaml  TestTMDBContract.test_search_media_movie.yaml  TestTMDBContract.test_search_media_tv.yaml
tests/snapshots/: jackett.json  transmission.json
